--- a/Field Book/app/src/main/res/layout-sw600dp/trait_date.xml
+++ b/Field Book/app/src/main/res/layout-sw600dp/trait_date.xml
@@ -115,6 +115,18 @@
                 android:paddingTop="10dp">
 
                 <Button
+                    android:id="@+id/noDateBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="60dp"
+                    android:background="@android:drawable/btn_default"
+                    android:gravity="center"
+                    android:minWidth="130dp"
+                    android:text="@string/nodate"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/text_size_large"
+                    android:textStyle="bold" />
+
+                <Button
                     android:id="@+id/clearDateBtn"
                     android:layout_width="wrap_content"
                     android:layout_height="60dp"
