--- a/Field Book/app/src/main/res/layout/trait_date.xml
+++ b/Field Book/app/src/main/res/layout/trait_date.xml
@@ -68,8 +68,8 @@
                     android:layout_height="wrap_content"
                     android:background="@android:drawable/btn_default"
                     android:gravity="center|center_vertical"
-                    android:text="@string/minusday"
                     android:minWidth="@dimen/button_default_width"
+                    android:text="@string/minusday"
                     android:textColor="#000000"
                     android:textSize="@dimen/text_size_large"
                     android:textStyle="bold" />
@@ -107,6 +107,18 @@
                 android:gravity="center_horizontal"
                 android:orientation="horizontal"
                 android:paddingTop="10dp">
+
+                <Button
+                    android:id="@+id/noDateBtn"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@android:drawable/btn_default"
+                    android:gravity="center"
+                    android:minWidth="@dimen/button_default_width"
+                    android:text="@string/nodate"
+                    android:textColor="#000000"
+                    android:textSize="@dimen/text_size_large"
+                    android:textStyle="bold" />
 
                 <Button
                     android:id="@+id/clearDateBtn"
