--- a/Field Book/app/src/main/res/menu/drawer_view.xml
+++ b/Field Book/app/src/main/res/menu/drawer_view.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_settings"
@@ -19,8 +18,7 @@
 
     </group>
 
-
-    <item android:title="@string/setup">
+    <item android:title="@string/profile">
         <menu>
             <item
                 android:id="@+id/nav_person"
@@ -39,5 +37,4 @@
 
         </menu>
     </item>
-
 </menu>
