--- a/Field Book/app/src/main/res/menu/traitmenu.xml
+++ b/Field Book/app/src/main/res/menu/traitmenu.xml
@@ -23,7 +23,7 @@
     <item
         android:id="@+id/addTrait"
         android:icon="@drawable/ic_action_new"
-        android:showAsAction="always"
+        android:showAsAction="ifRoom"
         android:title="@string/addtrait" />
     <item
         android:id="@+id/importexport"
