--- a/app/src/main/res/layout/dialog_brapi_export.xml
+++ b/app/src/main/res/layout/dialog_brapi_export.xml
@@ -210,6 +210,33 @@
         </LinearLayout>
 
         <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/brapiWrongSource"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingBottom="5dp"
+                android:textColor="#000000"
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/brapiWrongSourceLbl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingLeft="10dp"
+                android:paddingBottom="10dp"
+                android:text="@string/brapi_export_skipped_wrong_source"
+                android:textColor="#000000"
+                android:textSize="@dimen/text_size_medium"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <LinearLayout
             android:id="@+id/saving_panel"
             android:layout_width="match_parent"
             android:layout_height="100dp"
