Fix dialog displaying bug. Add title to dialog.

--- a/app/src/main/res/layout/dialog_info.xml
+++ b/app/src/main/res/layout/dialog_info.xml
@@ -12,6 +12,17 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/body_title"
+        android:text="@string/brapi_info_title"
+        android:textColor="#000000"
+        android:paddingHorizontal="20dp"
+        android:paddingVertical="10dp"
+        android:textSize="@dimen/text_size_large"
+        android:textStyle="bold"
+        android:gravity="center"></TextView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:id="@+id/body_message"
         android:text="Example"
         android:textColor="#000000"
