--- a/app/src/main/res/layout/trait_barcode.xml
+++ b/app/src/main/res/layout/trait_barcode.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.BarcodeTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/barcodeLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -17,4 +17,4 @@
         android:padding="10dp"
         android:scaleType="fitXY"
         android:src="@drawable/ic_trait_location" />
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.BarcodeTraitLayout>
