--- a/app/src/main/res/layout/trait_labelprint.xml
+++ b/app/src/main/res/layout/trait_labelprint.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.fieldbook.tracker.traitLayouts.LabelPrintTraitLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/labelprintLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -246,4 +246,4 @@
 
     </RelativeLayout>
 
-</LinearLayout>
+</com.fieldbook.tracker.traitLayouts.LabelPrintTraitLayout>
