--- a/app/src/main/res/drawable/main_ic_missing.xml
+++ b/app/src/main/res/drawable/main_ic_missing.xml
@@ -6,5 +6,5 @@
     android:viewportHeight="24">
     <path
         android:fillColor="#FF000000"
-        android:pathData="M11,15H13V17H11V15M11,7H13V13H11V7M12,2C6.47,2 2,6.5 2,12A10,10 0 0,0 12,22A10,10 0 0,0 22,12A10,10 0 0,0 12,2M12,20A8,8 0 0,1 4,12A8,8 0 0,1 12,4A8,8 0 0,1 20,12A8,8 0 0,1 12,20Z" />
+        android:pathData="M5,7 V17 H7 V12 L9,17 H11 V7 H9 V12 L7,7 H5Z M15,7 A2,2 0 0,0 13,9 V17 H15 V13 H17 V17 H19 V9 A2,2 0 0,0 17,7 H15 M15,9 H17 V11 H15 V9Z" />
 </vector>
