--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,10 +15,7 @@
         <item name="colorAccent">@color/main_colorAccent</item>
 
         <item name="buttonStyle">@style/ButtonStyle</item>
-    </style>
-
-    <style name="NavigationDrawerTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:textSize">@dimen/text_size_medium</item>
+        <item name="toolbarStyle">@style/AppToolbar</item>
     </style>
 
     <style name="AppDialog" parent="Theme.AppCompat.Light.Dialog">
@@ -33,7 +30,6 @@
         <item name="android:actionMenuTextAppearance">@style/AppMenuText</item>
         <item name="android:windowTitleStyle">@style/MyTitleTextStyle</item>
         <item name="android:background">@android:color/white</item>
-
     </style>
 
     <style name="ActivityDialog" parent="Theme.AppCompat.Light.Dialog">
@@ -83,17 +79,19 @@
         <item name="android:textColor">#000000</item>
     </style>
 
-    <style name="AppToolbar" parent="@style/ThemeOverlay.AppCompat.ActionBar">
+    <style name="AppToolbar" parent="@style/Widget.AppCompat.Toolbar">
+        <item name="titleTextColor">#343434</item>
         <item name="drawerArrowStyle">@style/MyDrawerArrowToggle</item>
+        <item name="theme">@style/MyToolbarTheme</item>
     </style>
 
     <style name="MyDrawerArrowToggle" parent="@style/Widget.AppCompat.DrawerArrowToggle">
         <item name="color">#343434</item>
     </style>
 
-    <style name="SearchSpinner" parent="android:style/Widget.ListView.DropDown">
-        <item name="android:divider">#FFEEEEEE</item>
-        <item name="android:dividerHeight">1dp</item>
+    <style name="MyToolbarTheme">
+        <!-- Used to tint the back arrow, menu and spinner arrow -->
+        <item name="colorControlNormal">#343434</item>
     </style>
 
 </resources>
