--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -156,31 +156,29 @@
         android:title="@string/preferences_brapi">
 
         <PreferenceScreen
+            android:icon="@drawable/ic_adv_brapi"
             android:key="brapi_preference_screen"
             android:title="@string/brapi_title">
             <PreferenceCategory
                 android:key="brapi_category"
                 android:title="@string/brapi_title">
                 <EditTextPreference
-                    android:icon="@drawable/ic_adv_infobar_count"
-                    android:key="BRAPI_BASE_URL"
-                    android:summary="@string/brapi_base_url_desc"
-                    android:title="@string/brapi_base_url"
-                    android:dialogTitle="@string/brapi_base_url"
-                    android:dialogMessage="@string/brapi_base_url_desc"
                     android:defaultValue="@string/brapi_base_url_default"
+                    android:dialogMessage="@string/brapi_base_url_desc"
+                    android:dialogTitle="@string/brapi_base_url"
+                    android:icon="@drawable/ic_adv_brapi_base"
+                    android:key="BRAPI_BASE_URL"
                     android:positiveButtonText="@string/brapi_save_authorize"
-                    />
+                    android:summary="@string/brapi_base_url_desc"
+                    android:title="@string/brapi_base_url" />
                 <Preference
                     android:icon="@drawable/ic_launch"
                     android:key="authorizeBrapi"
-                    android:title="@string/brapi_authorize"
-                    />
+                    android:title="@string/brapi_authorize" />
                 <Preference
                     android:icon="@drawable/ic_exit_to_app"
                     android:key="revokeBrapiAuth"
-                    android:title="@string/brapi_revoke_auth"
-                    />
+                    android:title="@string/brapi_revoke_auth" />
             </PreferenceCategory>
         </PreferenceScreen>
     </PreferenceCategory>
