--- a/app/src/main/res/xml/preferences_profile.xml
+++ b/app/src/main/res/xml/preferences_profile.xml
@@ -3,13 +3,13 @@
 
     <Preference
         android:icon="@drawable/ic_nav_drawer_person"
-        android:key="import_database"
+        android:key="pref_profile_person"
         android:summary=""
         android:title="@string/profile_person" />
 
     <Preference
         android:icon="@drawable/ic_nav_drawer_location"
-        android:key="export_database"
+        android:key="pref_profile_location"
         android:summary=""
         android:title="@string/profile_location" />
 
